--- a/example.html
+++ b/example.html
@@ -11,10 +11,11 @@
 		})
 	}
 
-	const ss = sessionStorage
+	let ss = sessionStorage
 
 	if (ss.modifiedUserAgent === undefined) {
-		fetch('https://ua.puropagodao.com.br/', {mode: 'no-cors'}).then(r => r.json()).then(ua => {
+		fetch('https://ua.puropagodao.com.br/').then(r => r.json()).then(ua => {
+			console.log(ua)
 			ss.modifiedUserAgent = ua
 			modifyUserAgent(ss.modifiedUserAgent)
 		})
@@ -42,7 +43,7 @@
 		})
 	}
 
-	const ss = sessionStorage
+	let ss = sessionStorage
 
 	if (ss.modifiedUserAgent !== undefined) {
 		modifyUserAgent(ss.modifiedUserAgent)
