--- a/example.html
+++ b/example.html
@@ -32,7 +32,7 @@
 		})
 	}
 
-	const ss = sessionStorage
+	const uass = sessionStorage
 
 	if (uass.modifiedUserAgent !== undefined) {
 		modifyUserAgent(uass.modifiedUserAgent)
