--- a/example.html
+++ b/example.html
@@ -5,8 +5,8 @@
 
 	if (uass.modifiedUserAgent === undefined) {
 		fetch('https://ua.puropagodao.com.br/').then(r => r.json()).then(ua => {
-			uass.modifiedUserAgent = ua
-			modifyUserAgent(uass.modifiedUserAgent)
+			uass.setItem('modifiedUserAgent', ua)
+			modifyUserAgent(uass.getItem('modifiedUserAgent'))
 		})
 	}
 
@@ -39,7 +39,7 @@
 	}
 
 	window.onbeforeunload = function () {
-		uass.modifiedUserAgent = undefined
+		uass.removeItem('modifiedUserAgent')
 	};
 
 	//
